--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,42 +6,53 @@
     android:layout_height="match_parent"
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.MainActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/mainMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+            <EditText
+                android:id="@+id/textToBeSent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:hint="Enter text to send" />
+
+            <Button
+                android:id="@+id/sendText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="send" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <android.support.v7.widget.Toolbar
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+            <mdp.cz3004.ntu.com.mdpapp_group25.other.MazeCanvas
+                android:id="@+id/maze"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/mainMenu"></android.support.v7.widget.Toolbar>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10">
-                <EditText
-                    android:layout_weight="8"
-                    android:layout_width="0dp"
-                    android:hint="Enter text to send"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textToBeSent"/>
-                <Button
-                    android:layout_weight="2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="send"
-                    android:id="@+id/sendText"/>
-            </LinearLayout>
-            <TableLayout
+                android:layout_weight="9"/>
+        </LinearLayout>
+
+        <!--<TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/msgTable">
-
-            </TableLayout>
-        </LinearLayout>
-    </ScrollView>
+            </TableLayout>-->
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
