--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <android.support.v7.widget.Toolbar
             android:id="@+id/mainMenu"
@@ -86,10 +86,29 @@
                         android:background="@null"
                         />
                 </RadioGroup>
-
+                <Button
+                    android:text="Left"
+                    android:id="@+id/LeftButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <Button
+                    android:text="Up"
+                    android:id="@+id/UpButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <Button
+                    android:text="Right"
+                    android:id="@+id/RightButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+        </LinearLayout>
         <!--<TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
