--- a/app/src/main/res/drawable-xhdpi/wp_toggle.xml
+++ b/app/src/main/res/drawable-xhdpi/wp_toggle.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_on"
+    <item android:drawable="@drawable/w_selected"
         android:state_checked="true"
         />
     <!-- When not selected, use white-->
-    <item android:drawable="@drawable/button_off"
+    <item android:drawable="@drawable/w_unselected"
         android:state_checked="false"/>
 </selector>
