--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.MainActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="0dp"
@@ -16,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/mainMenu"
             android:layout_width="match_parent"
-            android:layout_height="45dp"></android.support.v7.widget.Toolbar>
+            android:layout_height="50dp"></android.support.v7.widget.Toolbar>
 
         <LinearLayout
             android:visibility="gone"
@@ -62,7 +62,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/relativeOne"
-        app:layout_constraintBottom_toBottomOf="@+id/linearOne">
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearOne">
         <GridLayout
             android:id="@+id/gridOne"
             android:layout_width="wrap_content"
@@ -98,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_toRightOf="@+id/gridOne">
+            android:layout_alignParentRight="true">
             <RadioButton
                 android:id="@+id/sp_button"
                 android:layout_width="wrap_content"
@@ -109,7 +111,7 @@
                 android:textOff="@null"
                 android:background="@null"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="100dp"/>
+                android:layout_marginRight="10dp"/>
             <RadioButton
                 android:id="@+id/gp_button"
                 android:layout_width="wrap_content"
@@ -119,7 +121,7 @@
                 android:textOn="@null"
                 android:textOff="@null"
                 android:background="@null"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"/>
             <RadioButton
                 android:id="@+id/wp_button"
@@ -130,7 +132,7 @@
                 android:textOn="@null"
                 android:textOff="@null"
                 android:background="@null"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="30dp"/>
 
         </RadioGroup>
@@ -141,14 +143,14 @@
             android:layout_height="wrap_content"
             android:background="@android:color/background_light"
             android:src="@drawable/update"
-            android:layout_marginLeft="287dp"
+            android:layout_marginLeft="512dp"
             android:layout_marginTop="52dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="155dp"
+            android:layout_alignTop="@+id/coorTV"
+            android:layout_marginLeft="263dp"
             android:text="Coordinates"
             android:textStyle="bold"
             android:textAlignment="center" />
@@ -156,8 +158,7 @@
             android:id="@+id/coorTV"
             android:layout_width="90dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="148dp"
-            android:layout_marginTop="22dp"
+            android:layout_centerInParent="true"
             android:background="?attr/colorButtonNormal"
             android:textSize="10pt"
             android:textAlignment="center" />
