-able to read mazeinfo --display explored/unexplored/obstacle -implemented auto/manual --manual update button not yet included in the UI -log of incoming/outgoing msg implemented -fixed the mazecanvas coordinates orientation -able to send SP/WP/GP coordinates via bluetooth
TODO
-status(still not sure what to include)
-get current position from RPI during auto update
-manual update button not yet included in the UI

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/manualBtn"
-        android:title="@string/manual" />
+        android:title="@string/updateMode" />
 
     <item
         android:id="@+id/logBtn"
