--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,161 +7,160 @@
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.MainActivity">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:id="@+id/linearOne">
+        android:id="@+id/mainUI"
+        android:orientation="vertical">
         <android.support.v7.widget.Toolbar
             android:id="@+id/mainMenu"
             android:layout_width="match_parent"
             android:layout_height="50dp"></android.support.v7.widget.Toolbar>
 
         <LinearLayout
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="10">
-
-            <EditText
-                android:id="@+id/textToBeSent"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="8"
-                android:hint="Enter text to send" />
-
-            <Button
-                android:id="@+id/sendText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:text="send" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:id="@+id/linearOne"
             android:weightSum="10">
             <mdp.cz3004.ntu.com.mdpapp_group25.other.MazeCanvas
                 android:id="@+id/maze"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="9"/>
-
         </LinearLayout>
-        <!--<TableLayout
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/relativeOne"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearOne">
+            <GridLayout
+                android:id="@+id/gridOne"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="8"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+                <ImageButton
+                    android:id="@+id/UpButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/up_arrow"
+                    android:layout_row="0"
+                    android:layout_column="1"/>
+                <ImageButton
+                    android:id="@+id/LeftButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/left_arrow"
+                    android:layout_row="1"
+                    android:layout_column="0"/>
+                <ImageButton
+                    android:id="@+id/RightButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/right_arrow"
+                    android:layout_row="1"
+                    android:layout_column="2"/>
+            </GridLayout>
+
+            <RadioGroup
+                android:id="@+id/points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true">
+                <RadioButton
+                    android:id="@+id/sp_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/sp_toggle"
+                    android:text="@null"
+                    android:textOn="@null"
+                    android:textOff="@null"
+                    android:background="@null"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="10dp"/>
+                <RadioButton
+                    android:id="@+id/gp_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/gp_toggle"
+                    android:text="@null"
+                    android:textOn="@null"
+                    android:textOff="@null"
+                    android:background="@null"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"/>
+                <RadioButton
+                    android:id="@+id/wp_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/wp_toggle"
+                    android:text="@null"
+                    android:textOn="@null"
+                    android:textOff="@null"
+                    android:background="@null"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="30dp"/>
+
+            </RadioGroup>
+
+            <ImageButton
+                android:id="@+id/updateButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/background_light"
+                android:src="@drawable/update"
+                android:layout_marginLeft="512dp"
+                android:layout_marginTop="52dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/coorTV"
+                android:layout_marginLeft="263dp"
+                android:text="Coordinates"
+                android:textStyle="bold"
+                android:textAlignment="center" />
+            <TextView
+                android:id="@+id/coorTV"
+                android:layout_width="90dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:background="?attr/colorButtonNormal"
+                android:textSize="10pt"
+                android:textAlignment="center" />
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/logUI"
+            android:layout_weight="10"
+            android:orientation="vertical">
+            <TextView
+                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/msgTable">
-            </TableLayout>-->
+                android:layout_height="0dp"
+                android:text="Incoming"/>
+            <ListView
+                android:layout_weight="4"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/incomingmsg">
+            </ListView>
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="Outgoing"/>
+            <ListView
+                android:layout_weight="4"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/outgoingmsg">
+            </ListView>
+        </LinearLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/relativeOne"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearOne">
-        <GridLayout
-            android:id="@+id/gridOne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:columnCount="8"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
-            <ImageButton
-                android:id="@+id/UpButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/up_arrow"
-                android:layout_row="0"
-                android:layout_column="1"/>
-            <ImageButton
-                android:id="@+id/LeftButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/left_arrow"
-                android:layout_row="1"
-                android:layout_column="0"/>
-            <ImageButton
-                android:id="@+id/RightButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/right_arrow"
-                android:layout_row="1"
-                android:layout_column="2"/>
-    </GridLayout>
-
-        <RadioGroup
-            android:id="@+id/points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentRight="true">
-            <RadioButton
-                android:id="@+id/sp_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/sp_toggle"
-                android:text="@null"
-                android:textOn="@null"
-                android:textOff="@null"
-                android:background="@null"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="10dp"/>
-            <RadioButton
-                android:id="@+id/gp_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/gp_toggle"
-                android:text="@null"
-                android:textOn="@null"
-                android:textOff="@null"
-                android:background="@null"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"/>
-            <RadioButton
-                android:id="@+id/wp_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/wp_toggle"
-                android:text="@null"
-                android:textOn="@null"
-                android:textOff="@null"
-                android:background="@null"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="30dp"/>
-
-        </RadioGroup>
-
-        <ImageButton
-            android:id="@+id/updateButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/background_light"
-            android:src="@drawable/update"
-            android:layout_marginLeft="512dp"
-            android:layout_marginTop="52dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/coorTV"
-            android:layout_marginLeft="263dp"
-            android:text="Coordinates"
-            android:textStyle="bold"
-            android:textAlignment="center" />
-        <TextView
-            android:id="@+id/coorTV"
-            android:layout_width="90dp"
-            android:layout_height="40dp"
-            android:layout_centerInParent="true"
-            android:background="?attr/colorButtonNormal"
-            android:textSize="10pt"
-            android:textAlignment="center" />
-    </RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
