--- a/app/src/main/res/layout/activity_string_commands.xml
+++ b/app/src/main/res/layout/activity_string_commands.xml
@@ -67,7 +67,27 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"/>
+
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:text="Send Arena:"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>
+                <EditText
+                    android:id="@+id/SendArenaTxtbox"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"/>
+            </LinearLayout>
+
         </LinearLayout>
         <Button
             android:id="@+id/saveSetting"
