--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,12 @@
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="584dp"
         android:layout_height="wrap_content"
         android:id="@+id/mainUI"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
         <android.support.v7.widget.Toolbar
             android:id="@+id/mainMenu"
             android:layout_width="match_parent"
@@ -32,7 +34,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/relativeOne"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@+id/linearOne">
             <GridLayout
@@ -113,14 +114,14 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/background_light"
                 android:src="@drawable/update"
-                android:layout_marginLeft="512dp"
+                android:layout_marginLeft="488dp"
                 android:layout_marginTop="52dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/coorTV"
-                android:layout_marginLeft="263dp"
+                android:layout_marginLeft="248dp"
                 android:text="Coordinates"
                 android:textStyle="bold"
                 android:textAlignment="center" />
@@ -132,6 +133,16 @@
                 android:background="?attr/colorButtonNormal"
                 android:textSize="10pt"
                 android:textAlignment="center" />
+            <TextView
+                android:id="@+id/errorTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="62dp"
+                android:layout_marginLeft="242dp"
+                android:textSize="8pt"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark"
+                android:textStyle="bold" />
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
