--- a/app/src/main/res/layout/activity_string_commands.xml
+++ b/app/src/main/res/layout/activity_string_commands.xml
@@ -7,9 +7,7 @@
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.StringCommandsActivity">
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
@@ -67,7 +65,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"/>
-
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,17 +74,88 @@
                 <TextView
                     android:layout_weight="3"
                     android:layout_width="0dp"
-                    android:text="Send Arena:"
+                    android:text="Back:"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"/>
                 <EditText
-                    android:id="@+id/SendArenaTxtbox"
+                    android:id="@+id/BackTxtbox"
                     android:layout_weight="7"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"/>
             </LinearLayout>
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:text="Request Arena:"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>
+                <EditText
+                    android:id="@+id/RequestArenaTxtbox"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:text="Start Explore:"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>
+                <EditText
+                    android:id="@+id/StartExploreTxtbox"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:text="Stop Explore:"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>
+                <EditText
+                    android:id="@+id/StopExploreTxtbox"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+                <TextView
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:text="Start Shortest Path:"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>
+                <EditText
+                    android:id="@+id/StartShortestPathTxtbox"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"/>
+            </LinearLayout>
         </LinearLayout>
         <Button
             android:id="@+id/saveSetting"
