--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,7 +8,15 @@
     <item
         android:id="@+id/manualBtn"
         android:title="@string/updateMode" />
-
+    <item
+        android:id="@+id/refreshBtn"
+        android:title="@string/refresh" />
+    <item
+        android:id="@+id/exploreBtn"
+        android:title="@string/refresh" />
+    <item
+        android:id="@+id/sspBtn"
+        android:title="@string/refresh" />
     <item
         android:id="@+id/logBtn"
         android:title="@string/log" />
