--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,13 @@
                     android:src="@drawable/right_arrow"
                     android:layout_row="1"
                     android:layout_column="2"/>
+                <ImageButton
+                    android:id="@+id/BackButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/down_arrow"
+                    android:layout_row="1"
+                    android:layout_column="1"/>
             </GridLayout>
 
             <RadioGroup
