--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,6 +10,7 @@
         android:title="@string/updateMode" />
     <item
         android:id="@+id/refreshBtn"
+        android:visible="false"
         android:title="@string/refresh" />
     <item
         android:id="@+id/exploreBtn"
@@ -20,7 +21,9 @@
     <item
         android:id="@+id/logBtn"
         android:title="@string/log" />
-
+    <item
+        android:id="@+id/motionBtn"
+        android:title="@string/motion" />
     <item
         android:id="@+id/reconfigBtn"
         android:title="@string/reconfig" />
