--- a/app/src/main/res/layout/activity_string_commands.xml
+++ b/app/src/main/res/layout/activity_string_commands.xml
@@ -6,157 +6,161 @@
     android:layout_height="match_parent"
     tools:context="mdp.cz3004.ntu.com.mdpapp_group25.activity.StringCommandsActivity">
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Forward:"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/UpTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Forward:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/UpTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp" />
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Left:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/LeftTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Right:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/RightTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Back:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/BackTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Request Arena:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/RequestArenaTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Start Explore:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/StartExploreTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Stop Explore:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/StopExploreTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10">
+                    <TextView
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:text="Start Shortest Path:"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+                    <EditText
+                        android:id="@+id/StartShortestPathTxtbox"
+                        android:layout_weight="7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"/>
+                </LinearLayout>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Left:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/LeftTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Right:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/RightTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Back:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/BackTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Request Arena:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/RequestArenaTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Start Explore:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/StartExploreTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Stop Explore:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/StopExploreTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:weightSum="10">
-                <TextView
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:text="Start Shortest Path:"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
-                <EditText
-                    android:id="@+id/StartShortestPathTxtbox"
-                    android:layout_weight="7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"/>
-            </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
         <Button
             android:id="@+id/saveSetting"
             android:text="Save"
@@ -164,5 +168,4 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
