--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,6 +162,14 @@
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_red_dark"
                 android:textStyle="bold" />
+            <ToggleButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/toggleSE"
+                android:layout_marginTop="17dp"
+                android:layout_marginLeft="150dp"
+                android:textOn="@string/startExplore"
+                android:textOff="@string/startExplore"/>
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
